<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@android:color/background_light"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_food_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/image_food_dummy"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/rb_mean_rate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_food_description"/>

        <TextView
            android:id="@+id/txt_food_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/label_food_dummy"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/img_food_modify"
            app:layout_constraintStart_toEndOf="@+id/img_food_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_food_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hint_food_description"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/label_food_available_qty"
            app:layout_constraintEnd_toStartOf="@+id/img_food_modify"
            app:layout_constraintStart_toEndOf="@+id/img_food_photo"
            app:layout_constraintTop_toBottomOf="@+id/txt_food_name" />

        <TextView
            android:id="@+id/txt_food_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/label_price_dummy"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txt_food_available_qty"
            app:layout_constraintStart_toEndOf="@+id/img_food_photo"
            app:layout_constraintTop_toTopOf="@+id/label_food_available_qty" />

        <TextView
            android:id="@+id/label_food_available_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/available"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            app:layout_constraintTop_toBottomOf="@id/txt_food_description"
            app:layout_constraintBottom_toTopOf="@id/txt_food_available_qty"
            app:layout_constraintEnd_toStartOf="@+id/label_food_total_ordered_qty"
            app:layout_constraintStart_toEndOf="@+id/txt_food_price" />

        <TextView
            android:id="@+id/txt_food_available_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/label_quantity_dummy"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/label_food_available_qty"
            app:layout_constraintStart_toStartOf="@+id/label_food_available_qty" />

        <TextView
            android:id="@+id/label_food_total_ordered_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordered"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/label_food_available_qty"
            app:layout_constraintEnd_toStartOf="@+id/img_food_delete"
            app:layout_constraintStart_toEndOf="@+id/label_food_available_qty"
            app:layout_constraintTop_toTopOf="@+id/label_food_available_qty" />

        <TextView
            android:id="@+id/txt_food_total_ordered_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/label_quantity_dummy"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/label_food_total_ordered_qty"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/label_food_total_ordered_qty"
            app:layout_constraintTop_toBottomOf="@+id/label_food_total_ordered_qty" />

        <ImageView
            android:id="@+id/img_food_modify"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:layout_weight="5"
            android:alpha="0.3"
            android:contentDescription="@string/icon_modify"
            app:srcCompat="@drawable/ic_mode_edit_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_food_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="8dp"
            android:alpha="0.3"
            android:contentDescription="@string/icon_delete"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RatingBar
            android:id="@+id/rb_mean_rate"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:isIndicator="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_food_photo"
            app:layout_constraintStart_toStartOf="@+id/img_food_photo" />


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>